--- a/app/javascript/styles/theme-ui/layout-multiple-columns.scss
+++ b/app/javascript/styles/theme-ui/layout-multiple-columns.scss
@@ -4,7 +4,7 @@
 /* CSS variables */
 :root {
 
-  --bg-image : url('../images/theme/bg_dark.png');
+  --bg-image : url('../images/theme/bg_dark.jpg');
   --logo: url('../images/theme/wordmark_dark.png');
   --m-logo: url('../images/theme/m_logo_dark.png');
   --color-column: rgba(0, 0, 0, 0.4);
@@ -208,7 +208,7 @@ body.theme-default.layout-multiple-columns {
 
   --active-header-radial-gradient: radial-gradient(ellipse,rgb(239, 154, 154 / 25%) 0,rgb(255, 0 ,81 / 0%) 60%);
 
-  --bg-image : url('../images/theme/bg_light.png');
+  --bg-image : url('../images/theme/bg_light.jpg');
   --logo: url('../images/theme/wordmark_light.png');
   --m-logo: url('../images/theme/m_logo_light.png');
 
