--- a/app/javascript/styles/theme-ui/layout-multiple-columns.scss
+++ b/app/javascript/styles/theme-ui/layout-multiple-columns.scss
@@ -17,14 +17,18 @@
   --color-brand-twitter-mud: #273340;
   --color-brand-twitter-dark: #232543;
   --color-brand-twitter-threaded-line: #425364;
-  --color-brand-mastodon: #27a4b8;
-  --color-brand-mastodon-links: #81c5cf;
+
+  --color-brand-mastodon: #ebaf48;
+  --color-brand-mastodon-links: #ecce9a;
+
   --color-brand-mastodon-bg: #1e2028;
   --color-brand-mastodon-dim: #717c9b;
-  --color-brand-mastodon-mud: #272c40;
+  --color-brand-mastodon-mud: rgb(39 44 64 / .5);
   --color-brand-mastodon-dark: #232543;
   --color-brand-mastodon-threaded-line: #434264;
   --color-brand-mastodon-text-light: #8493a7;
+
+
 
   /* Colors */
   /* Note: Remember to search for the DIM hex
@@ -35,10 +39,10 @@
   --color-border: #38384d;
   --color-dim: var(--color-brand-mastodon-dim);
 
-  --color-accent:  #81c5cf;
-  --color-accent-dark: #27a4b8;
-  --color-accent-dark-50: #27a4b880;
-  
+  --color-accent:  #ecce9a;
+  --color-accent-dark: #ebaf48;
+  --color-accent-dark-50: #ebaf4880;
+
   --color-green: #00ba7c;
   --color-red: #f91880;
   --color-red-75: #f91880bf;
@@ -47,13 +51,15 @@
   --color-focusable-toot: #ffffff09;
   --color-light-text: #f7f9f9;
   --color-mud: var(--color-brand-mastodon-mud);
+  --color-arsenic: #393f4f;
   --color-black-coral: #5a5371;
   --color-profile-button-hover: #f1eff41a;
   --color-column-link-hover: #f7f7f91a;
   --color-modal-overlay: #5b708366;
   --color-dark: var(--color-brand-mastodon-dark);
   --color-thread-line: var(--color-brand-mastodon-threaded-line);
-  --color-gainsboro: #dcd9e8;
+  --color-topaz: #dadaf3;
+
   --color-light-purple: #9baec8;
   --color-lighter-purple: #a5b8d3;
   --color-dark-electric-blue: #576078;
@@ -207,56 +213,57 @@ body.theme-theme-ui-contrast.layout-multiple-columns {
 body.theme-default.layout-multiple-columns {
 
   --active-header-radial-gradient: radial-gradient(ellipse,rgb(239, 154, 154 / 25%) 0,rgb(255, 0 ,81 / 0%) 60%);
-
   --bg-image : url('../images/theme/bg_light.jpg');
   --logo: url('../images/theme/wordmark_light.png');
   --m-logo: url('../images/theme/m_logo_light.png');
-
   --color-column: rgba(255, 255, 255, 0.4);
-  --color-columns: rgba(255, 255, 255, 0.5);
 
-  --color-brand-mastodon: #be2a4d;
-  --color-brand-mastodon-links: #df98a2;
-  --color-accent-dark-50: #be2a4d80;
+  --color-brand-mastodon: #62597d;
+  --color-brand-mastodon-links: #7f7698;
+  --color-accent-dark-50: #62597d80;
 
-  --color-accent:#df98a2;
-  --color-accent-dark: #be2a4d;
+  --color-accent:#7f7698;
+  --color-accent-dark: #62597d;
 
   --color-bg: #fff;
   --color-fg: #000;
 
   --color-border: #e9dee0;
-  --color-dim: #c16c80;
-  --color-light-text: #1f1b23;
+  --color-dim: #9388a6;
 
   --color-green: #17bf63;
   --color-red: #e0245e;
   --color-red-75: #e0245ebf;
-  --color-focusable-toot: rgba(0, 0, 0, 0.035);
 
   --color-light-shade: #db9e9e12;
-  --color-mud: #f0dee2;
 
+  --color-focusable-toot: rgba(0, 0, 0, 0.035);
+  --color-light-text: #1f1b23;
+
+  --color-mud: #e5e1ed;
+  
   --color-black-coral: #9188a6;
 
-  --color-profile-button-hover: #db9e9e40;
-  --color-column-link-hover: #db9e9e40;
-  
+  --color-profile-button-hover: #1e1b231a;
+  --color-column-link-hover: #1e1b231a;
+
   --color-modal-overlay: #6a5b8366;
   --color-dark: #f7f9f9;
   --color-thread-line: #e1e8ed;
-  --color-gainsboro: #8899a6;
-  --color-light-purple: #df98a2;
+  --color-topaz: #8899a6;
+  
+  --color-light-purple: #9588a6;
+  
   --color-dark-electric-blue: #9088a6;
   --color-bg-75: #ffffffbf;
   --color-accent: var(--color-accent-dark);
   --color-ghost-button-text: var(--color-accent-dark);
 
-  --color-bg-compose-form: rgb(192 108 128 / .2);
-  --color-bg-compose-form-focus: rgb(192 108 128/ .4);
+  --color-bg-compose-form: rgb(147 136 166 / .2);
+  --color-bg-compose-form-focus: rgb(147 136 166 / .3);
+
   --color-hashtag: var(--color-accent-dark);
   --color-mention: var(--color-accent-dark);
-
   /* Misc */
   --compose-form-linear-gradient: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 53%, rgba(255, 255, 255, 0.8141631652661064) 76%, rgba(255, 255, 255, 0.7077205882352942) 87%, rgba(255, 255, 255, 0.458420868347339) 97%, rgba(255, 255, 255, 0) 100%);
 
