--- a/app/javascript/styles/mastodon-light/variables.scss
+++ b/app/javascript/styles/mastodon-light/variables.scss
@@ -5,16 +5,14 @@ $white: #ffffff;
 $red-600: #b7253d; // Deep Carmine
 $red-500: #df405a; // Cerise
 
-$classic-base-color: #372831;
-$classic-primary-color: #9baec8;
-$classic-secondary-color: #d9e1e8;
-$classic-highlight-color: #cf647d;
+$classic-base-color: #282c37;
+$classic-primary-color: #c3b9e0;
+$classic-secondary-color: #dcdae0;
+$classic-highlight-color: #675797; // Brand purple
 
-$blurple-600: #be2a4d; // Iris
-$blurple-500: #cf647d; // Brand purple
-$blurple-400: #7477fd; // Medium slate blue
-$blurple-300: #df98a2; // Faded Blue
-
+$blurple-600: #2d2740; // Iris
+$blurple-500: #423a5d; // Brand purple
+$blurple-300: #aea7c1; // Faded Blue
 $grey-600: #4e4c5a; // Trout
 $grey-100: #dadaf3; // Topaz
 
