--- a/app/javascript/styles/mastodon-light/variables.scss
+++ b/app/javascript/styles/mastodon-light/variables.scss
@@ -12,6 +12,7 @@ $classic-highlight-color: #675797; // Brand purple
 
 $blurple-600: #2d2740; // Iris
 $blurple-500: #423a5d; // Brand purple
+$blurple-400: #7477fd; // Medium slate blue
 $blurple-300: #aea7c1; // Faded Blue
 $grey-600: #4e4c5a; // Trout
 $grey-100: #dadaf3; // Topaz
